# lumio

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pi-version.json  pyproject.toml  upstreams.json
.gnosis/: entries.jsonl
chrome-extension/atlas-capture/: README.md  manifest.json  popup.css  popup.html  popup.js
extensions/: index.ts
extensions/atlas/: artifacts.ts  client.ts  comparison.ts  contracts.ts  digests.ts  index.ts  obsidian.ts  resource-purge.ts  resource-review.ts  summarize.ts  web-capture.ts  work.ts
extensions/context/: cap.ts  inspector.ts
extensions/guards/: dirty-repo.ts  permission-gate.ts
extensions/input/: inline-bash.ts
extensions/knowledge/: gnosis.ts  librarian.ts  oracle.ts
extensions/maintenance/: lumio-check.ts
extensions/model/: claude-fast.ts  fast-mode.ts  openai-fast.ts
extensions/notifications/: bark.ts  brrr.ts  notify.ts
extensions/review/: review.ts  triage-comments.ts
extensions/todo/: todo.ts
extensions/ui/: git-status.ts  minimal-footer.ts  openai-usage.ts  quiet-tools.ts
extensions/workflows/: agent-workflow-audit.ts
output/reviews/: ICDM2026_review_forms_draft.md
scripts/: lumio-check.ts
skills/bilibili-video-summary/: SKILL.md  TECHNICAL.md  pyproject.toml
src/lumio/: __init__.py  cli.py
src/lumio/llm/: base.py  (+1 more)
tests/: atlas-bilibili.test.ts  atlas-chrome-capture.test.ts  atlas-client.test.ts  atlas-comparison.test.ts  atlas-content.test.ts  atlas-digests.test.ts  atlas-purge.test.ts  atlas-reconcile.test.ts  atlas-review.test.ts  atlas-web.test.ts  atlas-work.test.ts
(+20 files in other folders)
