[project]
name = "lumio"
version = "0.1.0"
description = "AI agent system built with LangGraph"
readme = "README.md"
authors = [
    { name = "wicsp", email = "wicspa@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.0.19",
    "openai>=1.3.0",
    "rich>=13.6.0",
    "pydantic>=2.5.0",
    "langchain>=0.3.25",
    "langchain-deepseek>=0.1.3",
    "langchain-openai>=0.3.23",
    "langchain-tavily>=0.2.2",
]

[project.scripts]
lumio = "lumio:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.3.0",
]
